# openvino

inference-engine/tests/ie_test_utils/functional_test_utils/: layer_test_utils.cpp
inference-engine/tests_deprecated/functional/vpu/common/layers/: myriad_layers_topk_test.hpp
inference-engine/tools/vpu/: CMakeLists.txt
inference-engine/tools/vpu/common/: vpu_tools_common.cpp  vpu_tools_common.hpp
inference-engine/tools/vpu/vpu_graph_editor/: CMakeLists.txt  SubgraphCutter.cpp  SubgraphCutter.hpp  main.cpp
